criação de ArrayList na classe principal e override do método ToString